fix alignment and font for login signup

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
 }
 
 * {
+  font-family: 'SegoeUI', Helvetica Neue, Helvetica, Arial;
 }
 
 body {
@@ -159,6 +160,10 @@ div.user.container {
   background-size: cover;
   width: 100%;
   height: 600px;
+}
+
+.user .panel {
+  margin-top: 50px;
 }
 
 .form-group .table {
